Configs for SOC SRV

--- a/bind/dev.org
+++ b/bind/dev.org
@@ -3,7 +3,7 @@
 ;
 $TTL	604800
 @	IN	SOA	dev.org. root.dev.org. (
-			      2		; Serial
+			      3		; Serial
 			 604800		; Refresh
 			  86400		; Retry
 			2419200		; Expire
@@ -14,3 +14,6 @@ $TTL	604800
 
 proxyserver	IN	A	192.168.1.10
 www	IN	A	192.168.1.10
+
+; soc server below
+soc	IN	A	192.168.1.40
